<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:importantForAccessibility="no"
    >

    <ImageView
        android:id="@+id/icon_fuel_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fuel_one_input_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fuel_one_input_container"
        app:srcCompat="@drawable/icon_fuel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_one_input_container"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/icon_fuel_one"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_one_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_fuel_one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/fuel_one_input_container"
        app:layout_constraintStart_toEndOf="@+id/fuel_one_input_container"
        app:layout_constraintTop_toTopOf="@+id/fuel_one_input_container"
        android:layout_marginStart="16dp"
        app:cornerRadius="3dp"
        android:background="@color/black"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/icon_fuel_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/icon_fuel_one"
        app:layout_constraintTop_toBottomOf="@+id/fuel_one_input_container"
        app:srcCompat="@drawable/icon_fuel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_two_input_container"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/icon_fuel_two"
        app:layout_constraintStart_toStartOf="@+id/fuel_one_input_container"
        app:layout_constraintTop_toTopOf="@+id/icon_fuel_two">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_two_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_fuel_two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/black"
        android:text="@string/search"
        android:textColor="@color/white"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/fuel_two_input_container"
        app:layout_constraintStart_toEndOf="@+id/fuel_two_input_container"
        app:layout_constraintTop_toTopOf="@+id/fuel_two_input_container" />

    <ImageView
        android:id="@+id/icon_price_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/icon_fuel_two"
        app:layout_constraintTop_toBottomOf="@+id/fuel_two_input_container"
        app:srcCompat="@drawable/icon_money" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_one_input_container"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="Valor por L do Combustível 1"
        app:layout_constraintBottom_toBottomOf="@+id/icon_price_one"
        app:layout_constraintStart_toStartOf="@+id/fuel_two_input_container"
        app:layout_constraintTop_toTopOf="@+id/icon_price_one">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_one_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_price_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/icon_price_one"
        app:layout_constraintTop_toBottomOf="@+id/price_one_input_container"
        app:srcCompat="@drawable/icon_money" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_two_input_container"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="Valor por L do Combustível 2"
        app:layout_constraintBottom_toBottomOf="@+id/icon_price_two"
        app:layout_constraintStart_toStartOf="@+id/fuel_two_input_container"
        app:layout_constraintTop_toTopOf="@+id/icon_price_two">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_two_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/calc"
        android:textColor="@color/white"
        app:cornerRadius="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/icon_price_two"
        app:layout_constraintTop_toBottomOf="@+id/price_two_input_container" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/black"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:cornerRadius="3dp"
        app:layout_constraintStart_toEndOf="@+id/calc_button"
        app:layout_constraintTop_toTopOf="@+id/calc_button" />

    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@+id/clear_button"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/result_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintTop_toBottomOf="@+id/result_title"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/result_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintTop_toBottomOf="@+id/result_one"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/result_conclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="====="
        app:layout_constraintTop_toBottomOf="@+id/result_two"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:background="@color/black"
        android:textColor="@color/white"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
